# utwente-asdr-assignment3-tests

./: README.md  run.sh
launch/: closed_loop.yml  closed_loop_sim.yml
src/closed_loop/: CMakeLists.txt
src/closed_loop/src/: controller.cpp  splitter.cpp
src/light_pos_node/src/light_pos/: CMakeLists.txt
src/light_pos_node/src/light_pos/src/: light_pos.cpp
src/sim20/: CMakeLists.txt  package.xml
src/sim20/ControllerPanTilt/: ControllerPanTilt.cpp
src/sim20/ControllerPanTilt/common/: EulerAngles.cpp  MotionProfiles.cpp  MotionProfiles.h  xxinteg.cpp  xxinteg.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h
src/sim20/src/: pan_tilt_20_sim.cpp
xenomai-ros2-framework/: CMakeLists.txt  cvt_unit_test.c  fpga_indices.h  jiwy_main.cpp  xeno_test.cpp
xenomai-ros2-framework/ControllerPanTilt/: ControllerPanTilt.h  test_ControllerPanTilt.cpp
xenomai-ros2-framework/ControllerPanTilt/common/: EulerAngles.h  xxfuncs.cpp  xxfuncs.h  xxinverse.cpp  xxinverse.h  xxtypes.h
xenomai-ros2-framework/controllers/: CMakeLists.txt  ControllerPan.cpp  ControllerPan.h  ControllerTilt.cpp  ControllerTilt.h
xenomai-ros2-framework/controllers/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
xenomai-ros2-framework/framework/: communicationClass.h  ico_io.cpp
